[gd_scene load_steps=10 format=3 uid="uid://eaxyvqgnlhn1"]

[ext_resource type="Script" path="res://scripts/hedgehog_bomb.gd" id="1_06yar"]
[ext_resource type="Texture2D" uid="uid://c0i3wq1ejqn5h" path="res://assets/characters/landak/Attack/1.png" id="1_cbv0u"]
[ext_resource type="Texture2D" uid="uid://cubijd4qw0283" path="res://assets/characters/landak/Attack/2.png" id="2_di34v"]
[ext_resource type="Texture2D" uid="uid://ov3qh52p25tt" path="res://assets/characters/landak/Attack/3.png" id="3_6arxk"]
[ext_resource type="Texture2D" uid="uid://bbvvdmnlqgtfn" path="res://assets/characters/landak/Attack/4.png" id="4_2x20k"]
[ext_resource type="Texture2D" uid="uid://ctrtoifoah7rb" path="res://assets/characters/landak/Attack/5.png" id="5_ydyyn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x3ale"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6arxk")
}, {
"duration": 1.0,
"texture": ExtResource("4_2x20k")
}, {
"duration": 1.0,
"texture": ExtResource("5_ydyyn")
}],
"loop": true,
"name": &"explode",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_cbv0u")
}, {
"duration": 1.0,
"texture": ExtResource("2_di34v")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uq16b"]
size = Vector2(75, 51.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4k0v3"]
radius = 7.0
height = 24.0

[node name="hedgehog_bomb" type="Node2D"]
script = ExtResource("1_06yar")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -30)
scale = Vector2(0.523438, 0.49375)
sprite_frames = SubResource("SpriteFrames_x3ale")
animation = &"explode"
frame = 1
frame_progress = 0.198216

[node name="area_triggered" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_triggered"]
shape = SubResource("RectangleShape2D_uq16b")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4k0v3")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="area_triggered" to="." method="_on_area_triggered_area_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
